# x0

./: .gitignore  Anchor.toml  Cargo.toml  GRANT_PROPOSAL.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  whitepaper.tex  whitepaper.toc  x0-01_security_audit_internal.md
contracts/: .gitignore  foundry.toml
contracts/src/: X0LockContract.sol  X0UnlockContract.sol
contracts/test/: X0LockContract.t.sol  X0UnlockContract.t.sol
programs/x0-bridge/: Cargo.toml
programs/x0-bridge/src/: lib.rs  state.rs
programs/x0-bridge/src/instructions/: admin.rs  admin_timelock.rs  bridge_out.rs  execute_mint.rs  execute_mint.rs.bak  handle_message.rs  initialize.rs  mod.rs  replenish_reserve.rs  verify_evm_proof.rs
programs/x0-common/: Cargo.toml
programs/x0-common/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs  utils.rs  whitelist.rs
programs/x0-escrow/: Cargo.toml
programs/x0-escrow/src/: lib.rs  state.rs
programs/x0-escrow/src/instructions/: cancel_escrow.rs  claim_auto_release.rs  claim_timeout_refund.rs  create_escrow.rs  fund_escrow.rs  initiate_dispute.rs  mark_delivered.rs  mod.rs  release_funds.rs  resolve_dispute.rs
programs/x0-guard/: Cargo.toml
programs/x0-guard/src/: lib.rs  state.rs  state_old.rs
programs/x0-guard/src/instructions/: get_current_spend.rs  initialize_policy.rs  mod.rs  record_blink.rs  revoke_agent_authority.rs  set_policy_active.rs  update_agent_signer.rs  update_policy.rs
programs/x0-guard/src/transfer_hook/: initialize_extra_metas.rs  mod.rs  validate_transfer.rs
programs/x0-registry/: Cargo.toml
programs/x0-registry/src/: lib.rs  state.rs
programs/x0-registry/src/instructions/: deactivate_entry.rs  deregister_agent.rs  mod.rs  reactivate_entry.rs  register_agent.rs  update_registry.rs
programs/x0-reputation/: Cargo.toml
programs/x0-reputation/src/: lib.rs  state.rs
programs/x0-reputation/src/instructions/: apply_decay.rs  close_reputation.rs  get_reputation_score.rs  initialize_reputation.rs  migrate_reputation.rs  mod.rs  record_dispute.rs  record_failure.rs  record_resolution_favor.rs  record_success.rs
programs/x0-token/: Cargo.toml
programs/x0-token/src/: lib.rs
programs/x0-token/src/instructions/: configure_confidential.rs  deposit_confidential.rs  initialize_mint.rs  mint_tokens.rs  mod.rs  withdraw_fees.rs
programs/x0-wrapper/: Cargo.toml  keypair.json
programs/x0-wrapper/src/: lib.rs  state.rs
programs/x0-wrapper/src/instructions/: bridge_burn.rs  bridge_mint.rs  burn_and_redeem.rs  deposit_and_mint.rs  initialize_config.rs  initialize_mint.rs  mod.rs  set_bridge_program.rs
programs/x0-wrapper/src/instructions/admin/: accept_admin_transfer.rs  cancel_admin_action.rs  emergency_pause.rs  execute_emergency_withdraw.rs  execute_fee_change.rs  execute_pause.rs  initiate_admin_transfer.rs  mod.rs  schedule_emergency_withdraw.rs  schedule_fee_change.rs  schedule_pause.rs
programs/x0-zk-proofs/: Cargo.toml
programs/x0-zk-proofs/src/: elgamal.rs  lib.rs  proofs.rs  utils.rs
programs/x0-zk-proofs/tests/: wasm_tests.rs
programs/x0-zk-verifier/: Cargo.toml
programs/x0-zk-verifier/src/: lib.rs  state.rs
programs/x0-zk-verifier/src/instructions/: mod.rs  verify_pubkey_validity.rs  verify_transfer.rs  verify_withdraw.rs  verify_zero_balance.rs
programs/x0-zk-verifier/src/verification/: groth16.rs  mod.rs  transfer.rs
sdk/x0-sdk/: .gitignore  package.json
sdk/x0-sdk/scripts/: build-wasm.sh  devnet-test.mjs
sdk/x0-sdk/src/: blink.ts  bridge.ts  client.ts  confidential.ts  constants.ts  escrow.ts  index.ts  policy.ts  registry.ts  reputation.ts  token.ts  types.ts  utils.ts  wrapper.ts  x402.ts  zk-verifier.ts  zk-wasm.ts
sdk/x0-sdk/tests/: blink.test.ts  bridge.test.ts  confidential.test.ts  sdk.test.ts  utils.test.ts  wrapper.test.ts  x402.test.ts
sp1-evm-prover/: Cargo.toml  Makefile
sp1-evm-prover/common/: Cargo.toml
sp1-evm-prover/common/src/: lib.rs
sp1-evm-prover/guest/: Cargo.toml
sp1-evm-prover/guest/src/: main.rs
sp1-evm-prover/host/: Cargo.toml
sp1-evm-prover/host/src/: artifacts.rs  main.rs  prover.rs
sp1-prover/common/: Cargo.toml
sp1-prover/common/src/: lib.rs
sp1-prover/guest/: Cargo.toml
sp1-prover/guest/src/: main.rs
sp1-prover/host/: Cargo.toml
sp1-prover/host/src/: artifacts.rs  main.rs  prover.rs
sp1-solana-prover/: Cargo.toml  Makefile
sp1-solana-prover/common/: Cargo.toml
sp1-solana-prover/common/src/: lib.rs
sp1-solana-prover/guest/: Cargo.toml
sp1-solana-prover/guest/src/: main.rs
sp1-solana-prover/host/: Cargo.toml
sp1-solana-prover/host/src/: fetcher.rs  lib.rs  main.rs  prover.rs
sp1-solana-prover/host/src/fetcher/: merkle.rs  mod.rs  rpc.rs  tx_parser.rs  votes.rs
sp1-solana-prover/host/tests/: integration.rs
whitepaper/: whitepaper.aux  whitepaper.out  whitepaper.tex  whitepaper.toc
