[package]
name = "x0-guard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "x0-01 Guard Program - On-chain firewall for agent spending policies"

[lib]
crate-type = ["cdylib", "lib"]
name = "x0_guard"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
spl-token-2022 = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
x0-common = { path = "../x0-common" }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
