[package]
name = "x0-reputation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "x0-01 Reputation Program - On-chain reputation oracle for agent trust scoring"

[lib]
crate-type = ["cdylib", "lib"]
name = "x0_reputation"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
x0-common = { path = "../x0-common" }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
