[package]
name = "x0-zk-verifier"
version = "0.1.0"
edition = "2021"
authors = ["x0 Protocol <dev@x0protocol.dev>"]
description = "On-chain Groth16 zero-knowledge proof verification for Token-2022 confidential transfers"
repository = "https://github.com/x0-protocol/x0-01"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "x0_zk_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"
x0-common = { path = "../x0-common" }

# Solana ZK Token SDK for proof verification
solana-zk-token-sdk = "=1.18.22"

# POD type serialization
bytemuck = "1.14"

[dev-dependencies]
solana-program-test = "=1.18.22"
solana-sdk = "=1.18.22"
