[package]
name = "x0-sp1-solana-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SP1 host program: fetches Solana state and generates STARK proofs for x0 outbound bridge"

[dependencies]
x0-sp1-solana-common = { path = "../common" }
sp1-sdk = "3.0"
tokio = { version = "1", features = ["full"] }
solana-client = "1.18"
solana-sdk = "1.18"
solana-account-decoder = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1.3"
base64 = "0.22"
base58 = "0.2"
sha2 = "0.10"
